name:           TextBook
version:        0.0
license:        BSD3
license-file:   LICENSE
author:         textbook@lists.facebook.com
synopsis:       command-line access to facebook
build-depends:  FUtil, base, directory, filepath, time, binary, json, mtl, HSH,
                bytestring, bytestring-trie,  time, pureMD5, http-wget, process, derive, containers
build-type:     Simple
Cabal-Version:  >= 1.2

executable:     fb
hs-source-dirs: src
main-is:        Main.hs
